--- a/src/main/resources/templates/orderItem/_showModal.html
+++ b/src/main/resources/templates/orderItem/_showModal.html
@@ -10,6 +10,9 @@
             </div>
             <div class="modal-body" style="background: antiquewhite">
                 <b>Country: </b><span th:text="${orderItem.countries.countryEn}"></span><br>
+                <b>Quantity: </b>
+                <span th:text="${orderItem.quantity}"></span>
+                <span th:text="${orderItem.unitQuantity}"></span><br>
                 <b>Price Sell: </b>
                 <span th:text="${orderItem.finalPrice}"></span>
                 <span>zł</span>
