--- a/src/main/resources/templates/coin/forSell/coins.html
+++ b/src/main/resources/templates/coin/forSell/coins.html
@@ -83,7 +83,10 @@
                         </div>
                         <div class="page-header col-md-2" style="border-left: solid;border-color: darkgray;">
                             <div sec:authorize="hasAuthority('ADMIN')">
-                                przycis EDYTUJ
+                                <div style="display: flex">
+                                    <a th:replace="fragments/button/_button-edit_icon_small :: edit_icon_small(edit = '/coin/edit/' + ${coin.coinId})"></a>
+                                </div>
+                                <hr class="my-2" style="border-color: black; width: 100%">
                                 <div style="background: orange">
                                     <strong>Visible: </strong>
                                     <span th:text="${coin.visible}"></span>
