--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -74,6 +74,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" th:href="@{/customer}">Customer</a>
+                        <hr class="my-2">
+                        <a class="dropdown-item" th:href="@{/itemForSell}">Item</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
