Zablokowano edycje zakończonego zamówienia dodano przycisk powrotu.

--- a/src/main/resources/static/css/my_style.css
+++ b/src/main/resources/static/css/my_style.css
@@ -61,20 +61,24 @@ body
 .Open
 {
     background-color: lightgreen;
+    padding: 0 5px 0 5px;
 }
 
 .Close
 {
     background-color: lightcoral;
+    padding: 0 5px 0 5px;
 }
 .Reservation
 {
     background-color: yellow;
+    padding: 0 5px 0 5px;
 }
 
 .Other
 {
     background-color: gray;
+    padding: 0 5px 0 5px;
 }
 
 
