--- a/src/main/resources/templates/order/index.html
+++ b/src/main/resources/templates/order/index.html
@@ -50,11 +50,14 @@
                             <div class="modal fade" th:attr="id= 'order-' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div th:replace="order/_showModal :: showModal"></div>
                             </div>
-                                <a th:href="@{'/order/edit/' + ${order.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>
-                                <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#order' + ${order.id}" >Delete</a>
-                            <div class="modal fade" th:attr="id= 'order' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div th:replace="order/_confirmDeleteModal :: confirmDeleteModal"></div>
-                            </div>
+                            <span th:if="${order.statusOrders.statusEn} != 'Close'">
+<!--                                <span th:text="${order.statusOrders.statusEn}"></span>-->
+                                    <a th:href="@{'/order/edit/' + ${order.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>
+                                    <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#order' + ${order.id}" >Delete</a>
+                                <div class="modal fade" th:attr="id= 'order' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="order/_confirmDeleteModal :: confirmDeleteModal"></div>
+                                </div>
+                            </span>
                         </td>
                     </tr>
                 </Block>
