--- a/src/main/resources/templates/orderItem/index.html
+++ b/src/main/resources/templates/orderItem/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" xmlns:spanth="http://www.w3.org/1999/html"
       layout:decorate="~{layouts/layout}">
 <head>
     <title>Order Item</title>
@@ -13,11 +13,15 @@
             <h1 class="display-4" style="text-align: center">Order Item</h1>
             <hr class="my-2">
             <b>Number Order: </b><span th:text="${orderItem.orders.numberOrder}"></span><br>
-            <span th:text="${orderItem.Orders.customers.name}"></span>
+            <b>Status Order: </b><span th:text="${orderItem.orders.statusOrders.statusEn}" th:class="${orderItem.orders.statusOrders.statusEn}" style="padding: 0 5px 0 5px;"></span><br>
+            <b></b><span th:text="${orderItem.Orders.customers.name}"></span>
+            <b>UUID: </b><span th:text="${orderItem.Orders.customers.uniqueId}"></span>
             <hr class="my-2">
             <div style="display: inline-flex;">
-                <a th:href="@{'/orderItem/forSell/?orderId=' + ${orderItem.Orders.id}}" class="btn btn-sm btn-primary mr-1" >Add new Item</a>
-<!--                <a th:replace="fragments/button/_button-back :: back(back = '/customer')"></a>-->
+                <div th:if="${orderItem.orders.statusOrders.statusEn} != 'Close'" style="display: inline-flex;">
+                    <a th:href="@{'/orderItem/forSell/?orderId=' + ${orderItem.Orders.id}}" class="btn btn-sm btn-primary mr-1" >Add new Item</a>
+                </div>
+                <a th:replace="fragments/button/_button-back :: back(back = '/order/' + ${orderItem.Orders.customers.uniqueId})"></a>
             </div>
             <hr class="my-2">
             <table class="table table-striped table-bordered table-hover table-sm" >
@@ -77,16 +81,13 @@
                             <div class="modal fade" th:attr="id= 'item-' + ${orderItem.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div th:replace="orderItem/_showModal :: showModal"></div>
                             </div>
-                            <a th:href="@{'/orderItem/edit/?itemId=' + ${orderItem.id}}" class="btn btn-sm btn-primary mr-1" style="font-size: 10px">Edit</a>
-                            <a th:href="@{'/orderItem/delete/' + ${orderItem.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#item' + ${orderItem.id}" >Delete</a>
-                            <div class="modal fade" th:attr="id= 'item' + ${orderItem.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div th:replace="orderItem/_confirmDeleteModal :: confirmDeleteModal"></div>
-                            </div>
-<!--                                <a th:href="@{'/order/edit/' + ${order.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>-->
-<!--                                <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#order' + ${order.id}" >Delete</a>-->
-<!--                            <div class="modal fade" th:attr="id= 'order' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
-<!--                                <div th:replace="order/_confirmDeleteModal :: confirmDeleteModal"></div>-->
-<!--                            </div>-->
+                            <span th:if="${orderItem.orders.statusOrders.statusEn} != 'Close'" >
+                                <a th:href="@{'/orderItem/edit/?itemId=' + ${orderItem.id}}" class="btn btn-sm btn-primary mr-1" style="font-size: 10px">Edit</a>
+                                <a th:href="@{'/orderItem/delete/' + ${orderItem.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#item' + ${orderItem.id}" >Delete</a>
+                                <div class="modal fade" th:attr="id= 'item' + ${orderItem.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="orderItem/_confirmDeleteModal :: confirmDeleteModal"></div>
+                                </div>
+                            </span>
                         </td>
                     </tr>
                 </Block>
