--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -43,7 +43,7 @@
                         <a class="dropdown-item" th:href="@{/note/newNotes}">New Notes</a>
                         <a class="dropdown-item" th:href="@{/note/future}">Future Notes</a>
                         <a class="dropdown-item" th:href="@{/note/forSell}">Note For Sell</a>
-
+                        <a class="dropdown-item" th:href="@{/note/sold}">Note Sold</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
