--- a/src/main/resources/templates/note/sold/notes.html
+++ b/src/main/resources/templates/note/sold/notes.html
@@ -12,7 +12,7 @@
             <h1 class="display-4" style="text-align: center">Notes</h1>
             <hr class="my-2">
             <div style="display: flex;">
-                <a th:replace="fragments/button/_button-back :: back(back = '/note/forSell')"></a>
+                <a th:replace="fragments/button/_button-back :: back(back = '/note/sold')"></a>
             </div>
             <hr class="my-2">
             <div th:replace="note/fragments/_noteList :: noteList"></div>
