--- a/src/main/resources/templates/note/collection/notes.html
+++ b/src/main/resources/templates/note/collection/notes.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+
       layout:decorate="~{layouts/layout}">
 
 <head>
@@ -26,12 +27,18 @@
                     <th:block th:each="note : ${notes}">
 
                         <div class="col-auto note-box">
-
-                            <div style="display: flex; justify-content: center">
-                                <div th:replace="fragments/_image-midle :: image-midle(image = ${note.aversPath})"></div>
-                                <div th:replace="fragments/_image-midle :: image-midle(image = ${note.reversePath})"></div>
+                            <div>
+                                <div>
+                                    <a th:href="@{'/note/collection/show/' + ${note.id}}" data-toggle="modal" th:attr="data-target='#Note-' + ${note.id}" >
+                                        <div th:replace="fragments/_image-midle :: image-midle(image = ${note.aversPath})"></div>
+                                        <div th:replace="fragments/_image-midle :: image-midle(image = ${note.reversePath})"></div>
+                                    </a>
+                                    <div class="modal fade" th:attr="id= 'Note-' + ${note.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div th:replace="note/collection/_showModal :: showModal"></div>
+                                    </div>
+                                </div>
                             </div>
-                            <div style="text-align: left; font-size: small">
+                            <div class="container" style="text-align: left; font-size: small">
                                 <span th:text="${note.denomination >= 1 ? #numbers.formatDecimal(note.denomination,1,0,'COMMA') :  #numbers.formatDecimal(note.denomination,1,2,'COMMA')} + ' ' + ${note.nameCurrency}"></span><br>
                                 <span th:text="${'Year: ' + note.itemDate}"></span><br>
                                 <span th:text="${'Quality: ' + note.qualities.quality}"></span><br>
@@ -42,13 +49,12 @@
                                 </div>
                                 <!--                                <a th:replace="fragments/button/_button-show :: show(show = '/note/collection/show/' + ${note.id})"></a>-->
                                 <div style="margin-bottom: 5px">
-                                    <a th:href="@{'/note/collection/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#Note-' + ${note.id}" >SHOW</a>
+<!--                                    <a th:href="@{'/note/collection/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#Note-' + ${note.id}" >SHOW</a>-->
+                                    <a th:href="@{'/note/collection/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px"
+                                    >SHOW</a>
                                 </div>
-                                <div class="modal fade" th:attr="id= 'Note-' + ${note.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div th:replace="note/collection/_showModal :: showModal"></div>
-                                </div>
+
                             </div>
-                            <!--                            <a th:href="@{'/note/collection/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
                         </div>
                     </th:block>
                 </div>
