poprawki light box

--- a/src/main/resources/templates/note/collection/show.html
+++ b/src/main/resources/templates/note/collection/show.html
@@ -10,6 +10,7 @@
     <div layout:fragment="content" class="container">
 
         <div class="jumbotron">
+            <h1 class="display-4" style="text-align: center">NOTE SHOW</h1>
             <div th:replace="note/fragments/_note-show :: note-show"></div>
             <hr class="my-2">
             <div>
