--- a/src/main/resources/templates/coin/collection/coins.html
+++ b/src/main/resources/templates/coin/collection/coins.html
@@ -25,9 +25,15 @@
                 <div class="form-row align-items-center">
                     <th:block th:each="coin : ${coins}">
                         <div class="col-auto note-box">
-                            <div style="display: flex; justify-content: center">
-                                <div th:replace="fragments/_image-midle :: image-midle(image = ${coin.aversPath})"></div>
-                                <div th:replace="fragments/_image-midle :: image-midle(image = ${coin.reversePath})"></div>
+                            <div >
+                                <a th:href="@{'/coin/collection/show/' + ${coin.id}}" data-toggle="modal" th:attr="data-target='#Coin-' + ${coin.id}"
+                                   style="display: flex; justify-content: center">
+                                    <div th:replace="fragments/_image-midle :: image-midle(image = ${coin.aversPath})"></div>
+                                    <div th:replace="fragments/_image-midle :: image-midle(image = ${coin.reversePath})"></div>
+                                </a>
+                                <div class="modal fade" th:attr="id= 'Coin-' + ${coin.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="coin/collection/_showModal :: showModal"></div>
+                                </div>
                             </div>
                             <div style="text-align: left; font-size: small">
                                 <span th:text="${coin.denomination >= 1 ? #numbers.formatDecimal(coin.denomination,1,0,'COMMA') :  #numbers.formatDecimal(coin.denomination,1,2,'COMMA')} + ' ' + ${coin.nameCurrency}"></span><br>
@@ -39,10 +45,7 @@
                                     <p th:text="${'Visible: ' + coin.visible}"></p>
                                 </div>
                                 <div style="margin-bottom: 5px">
-                                    <a th:href="@{'/coin/collection/show/' + ${coin.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#Coin-' + ${coin.id}" >SHOW</a>
-                                </div>
-                                <div class="modal fade" th:attr="id= 'Coin-' + ${coin.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div th:replace="coin/collection/_showModal :: showModal"></div>
+                                    <a th:href="@{'/coin/collection/show/' + ${coin.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
                                 </div>
                             </div>
                         </div>
