--- a/src/main/resources/templates/coin/collection/show.html
+++ b/src/main/resources/templates/coin/collection/show.html
@@ -8,84 +8,14 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-        <div class="container">
-            <h1 style="text-align: center">COIN SHOW</h1>
-        </div>
-        <div class="container" style="display: inline-block">
+        <div class="jumbotron">
+            <div class="container">
+                <h1 style="text-align: center">COIN SHOW</h1>
+            </div>
+            <div th:replace="coin/fragments/_coin-show :: coin-show"></div>
+            <div >
                 <a th:replace="fragments/button/_button-back :: back(back = '/coin/collection/coins/?selectCurrencyId=' + ${coin.currencies.id} + '&status=KOLEKCJA')"></a>
-<!--                <a th:replace="fragments/button/_button-edit :: edit(edit = '/coin/edit/' + ${coin.id})"></a>-->
-        </div>
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="col field " style="float: left">
-                    <strong>Id: </strong>
-                    <span th:text="${coin.id}"></span><br>
-                    <strong>Date Buy: </strong>
-                    <span th:text="${coin.dateBuy}"></span><br>
-                    <strong>Bought: </strong>
-                    <span th:if=" ${coin.boughts} != null">
-                        <span th:text="${coin.boughts.name}"></span>
-                    </span><br>
-                    <strong>Visible: </strong>
-                    <span th:text="${coin.visible}"></span><br>
-                    <strong>Created: </strong>
-                    <span th:text="*{#calendars.format(coin.created_at,'yyyy-MM-dd HH:mm:ss')}"></span><br>
-                    <strong>Updated: </strong>
-                    <span th:text="*{#calendars.format(coin.updated_at,'yyyy-MM-dd HH:mm:ss')}"></span>
-                </div>
-                <div class="col field" style="float: left">
-                    <strong>Denomination: </strong>
-                    <span th:text="${#numbers.formatDecimal(coin.denomination,1,0,'COMMA')}"></span>
-                    <span th:text="${coin.nameCurrency}"></span><br>
-                    <strong>Data: </strong>
-                    <span th:text="${coin.itemDate}"></span><br>
-                    <strong>Series: </strong>
-                    <span th:text="${coin.series}"></span><br>
-                    <strong>Image Type</strong>
-                    <span th:text="${coin.imageTypes.type}"></span><br>
-                    <strong>Quality: </strong>
-                    <span th:text="${coin.qualities.quality}"></span><br>
-                    <strong>Quantity: </strong>
-                    <span th:text="${coin.quantity}"></span>
-                    <span th:text="${coin.unitQuantity}"></span><br>
-                    <strong> Actives: </strong>
-                    <span th:text="${coin.actives.name}"></span>
-                </div>
-                <div class="col field" style="float: left">
-                    <strong>Diameter: </strong>
-                    <span th:text="${#numbers.formatDecimal(coin.diameter,1,2)} + 'mm'"></span><br>
-                    <strong>Thickness: </strong>
-                    <span th:text="${#numbers.formatDecimal(coin.thickness,1,2)} + 'mm'"></span><br>
-                    <strong>Weight: </strong>
-                    <span th:text="${#numbers.formatDecimal(coin.weight,1,2)} + 'gr'"></span><br>
-                    <strong>Price Buy: </strong>
-                    <span th:text="${#numbers.formatDecimal(coin.priceBuy,1,2)} + 'zł'"></span><br>
-                    <strong>Price Sell: </strong>
-                    <span th:text="${#numbers.formatDecimal(coin.priceSell,1,2)} + 'zł'"></span><br>
-                    <strong>Status: </strong>
-                    <span th:text="${coin.statuses.status}"></span><br>
-                    <strong>Status Sell: </strong>
-                    <span th:text="${coin.statusSell}"></span>
-                </div>
-            </div>
-        </div>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-            <div class="col field " style="float: left">
-                <textarea th:text="${coin.description}" style="width: 100%; height: 125px; color: black; resize: none; background: darkgray;" disabled></textarea>
-            </div>
-            <div class="col field " style="float: left">
-                <textarea th:text="${coin.composition}" style="width: 100%; height: 125px; color: black; resize: none; background: darkgray;" disabled></textarea>
-            </div>
-        </div>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                    <img th:src="${coin.aversPath}" style="max-width: 100%; max-height: 350px"/>
-                </div>
-                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                    <img th:src="${coin.reversePath}" style="max-width: 100%; max-height: 350px"/>
-                </div>
-
-            <div class="container col field" style="padding: 10px 10px 10px 10px">
+<!--                    <a th:replace="fragments/button/_button-edit :: edit(edit = '/coin/edit/' + ${coin.id})"></a>-->
             </div>
         </div>
     </div>
