--- a/src/main/resources/templates/note/edit.html
+++ b/src/main/resources/templates/note/edit.html
@@ -17,16 +17,16 @@
                 <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>
             </form>
             <hr class="my-2">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                    <img th:src="${noteForm.aversPath}" style="max-width: 100%; max-height: 350px"/>
-                </div>
-                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                    <img th:src="${noteForm.reversePath}" style="max-width: 100%; max-height: 350px"/>
-                </div>
-
-                <div class="container col field" style="padding: 10px 10px 10px 10px">
-                </div>
+            <div class="row row-cols-1" style="margin-left: 20px; margin-right: 20px; max-height: 100%">
+<!--                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">-->
+<!--                    <img th:src="${noteForm.aversPath}" style="max-width: 100%; max-height: 350px"/>-->
+<!--                </div>-->
+<!--                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">-->
+<!--                    <img th:src="${noteForm.reversePath}" style="max-width: 100%; max-height: 350px"/>-->
+<!--                </div>-->
+                <div th:replace="note/fragments/_lightBoxNote :: lightBox(note = ${noteForm})"></div>
+<!--                <div class="container col field" style="padding: 10px 10px 10px 10px">-->
+<!--                </div>-->
             </div>
             <hr class="my-2">
             <div style="display: block ruby">
