--- a/src/main/resources/templates/note/collection/index.html
+++ b/src/main/resources/templates/note/collection/index.html
@@ -11,7 +11,7 @@
         <div class="jumbotron">
             <h1 class="display-4" style="text-align: center">CONTINENT</h1>
             <hr class="my-2">
-            <div class="container">
+            <div>
                 <div class="row">
                     <Block th:each="continent : ${continents}">
                         <div class="col-sm-2" style="text-align: center; max-width: 100%">
