Dodano security Collection - Controller - views

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -63,7 +63,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" th:href="@{/security}">Add Security</a>
-<!--                        <a class="dropdown-item" th:href="@{/coin/collection}">Colection</a>-->
+                        <a class="dropdown-item" th:href="@{/security/collection}">Colection</a>
 <!--                        <a class="dropdown-item" th:href="@{/coin/newCoins}">New Coins</a>-->
 <!--                        <a class="dropdown-item" th:href="@{/coin/forSell}"> Coin For Sell</a>-->
                     </div>
