--- a/src/main/resources/templates/coin/forSell/index.html
+++ b/src/main/resources/templates/coin/forSell/index.html
@@ -19,7 +19,7 @@
                             <div calss="container" style="margin: 15px; width: 160px">
                                 <a th:href="@{'/coin/forSell/country/coins/' + ${country.countryId}}">
                                     <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
-                                    <span th:text="${country.countryPl + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
+                                    <span th:text="${country.countryEn + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
                                 </a>
                             </div>
                         </div>
