Poprawki edycji notes poprawić edycję po płędzi ewprowadzania zmian

--- a/src/main/resources/templates/note/fragments/_lightBoxNote.html
+++ b/src/main/resources/templates/note/fragments/_lightBoxNote.html
@@ -43,6 +43,7 @@
                     <b>OPIS</b>
                     <hr class="my-2">
                     <div style="text-align: left">
+<!--                        <b>Country: </b><span th:text="${note.currencies.countries.countryEn}"></span><br>-->
                         <b>Country: </b><span th:text="${note.currencies.countries.countryEn}"></span><br>
                         <b>Series: </b><span th:text="${note.currencies.currencySeries}"></span>
                         <div th:if="${note.width}  != null ">
