--- a/src/main/resources/templates/note/edit.html
+++ b/src/main/resources/templates/note/edit.html
@@ -13,6 +13,11 @@
             <h1 class="display-4" style="text-align: center">NOTE EDIT</h1>
             <hr class="my-2">
             <form th:action="@{/note/edit}" method="post" th:object="${noteForm}">
+                <div>
+                    <label class="m-0">Id</label>
+                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{id}" placeholder="Id" style="max-width: 80px" readonly/>
+                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{created_at}" placeholder="created At" readonly th:type="hidden" />
+                </div>
                 <div th:replace="note/_form :: form"></div>
                 <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>
             </form>
