--- a/src/main/resources/templates/note/fragments/_lightBoxNote.html
+++ b/src/main/resources/templates/note/fragments/_lightBoxNote.html
@@ -44,8 +44,12 @@
                     <hr class="my-2">
                     <div style="text-align: left">
 <!--                        <b>Country: </b><span th:text="${note.currencies.countries.countryEn}"></span><br>-->
-                        <b>Country: </b><span th:text="${note.currencies.countries.countryEn}"></span><br>
-                        <b>Series: </b><span th:text="${note.currencies.currencySeries}"></span>
+                        <b>Country: </b><span th:text="${currencies[0].countries.countryEn}"></span><br>
+<!--                        <b>Series: </b><span th:text="${note.currencies.currencySeries}"></span>-->
+                        <span th:if="${note.currencies.currencySeries}">
+                            <b>Series: </b><span th:text="${note}"></span>
+                        </span>
+
                         <div th:if="${note.width}  != null ">
                             <b>Size: </b> <span>[[${#numbers.formatDecimal(note.width,1,0)}]] x [[${#numbers.formatDecimal(note.height,1,0)}]] </span><br>
                         </div>
