--- a/src/main/resources/templates/note/fragments/_lightBoxNote.html
+++ b/src/main/resources/templates/note/fragments/_lightBoxNote.html
@@ -43,13 +43,8 @@
                     <b>OPIS</b>
                     <hr class="my-2">
                     <div style="text-align: left">
-<!--                        <b>Country: </b><span th:text="${note.currencies.countries.countryEn}"></span><br>-->
-                        <b>Country: </b><span th:text="${currencies[0].countries.countryEn}"></span><br>
-<!--                        <b>Series: </b><span th:text="${note.currencies.currencySeries}"></span>-->
-                        <span th:if="${note.currencies.currencySeries}">
-                            <b>Series: </b><span th:text="${note}"></span>
-                        </span>
-
+                        <b>Country: </b><span th:text="${note.currencies.countries.countryEn}"></span><br>
+                        <b>Series: </b><span th:text="${note.currencies.currencySeries}"></span>
                         <div th:if="${note.width}  != null ">
                             <b>Size: </b> <span>[[${#numbers.formatDecimal(note.width,1,0)}]] x [[${#numbers.formatDecimal(note.height,1,0)}]] </span><br>
                         </div>
@@ -97,5 +92,4 @@
             captionText.innerHTML = dots[slideIndex-1].alt;
         }
     </script>
-
 </div>
