--- a/src/main/resources/templates/coin/edit.html
+++ b/src/main/resources/templates/coin/edit.html
@@ -15,7 +15,7 @@
             <div>
                 <label class="m-0">Id</label>
                 <input class="form-control form-control-sm mb-2" type="text" th:field="*{id}" placeholder="Id" style="max-width: 80px" readonly/>
-                <input class="form-control form-control-sm mb-2" type="text" th:field="*{created_at}" placeholder="created At" readonly/>
+                <input class="form-control form-control-sm mb-2" type="text" th:field="*{created_at}" readonly th:type="hidden"/>
             </div>
             <div th:replace="coin/_form :: form"></div>
             <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>
